--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Inventory Management is a headless inventory management platform built on Node.js, React.js and Kubernetes."
     />
     <title>Inventory Management</title>
   </head>
