Athithya: Added AppBar and SideNav Layout; Issues with Mobile View and Desktop View Selected nav Sync

--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, user-scalable=0, maximum-scale=1, minimum-scale=1"
+    />
+    <meta
       name="description"
       content="Inventory Management is a headless inventory management platform built on Node.js, React.js and Kubernetes."
     />
